# SDL2_Ponging

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: main.cpp
src/: common.h  game.h
src/entities/: ball.cpp  ball.h  match.h  paddle.cpp  paddle.h
src/game/: game.cpp  game.h  match.cpp  match.h  player.cpp  player.h
src/geometry/: vec2d.cpp  vec2d.h
src/utils/: log_utils.cpp  log_utils.h  renderer_utils.cpp  renderer_utils.h  window_utils.cpp  window_utils.h
